[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/selection_tile.png" type="Texture" id=1]
[ext_resource path="res://scripts/SelectableTile.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="SelectableTile" type="Area2D" groups=["lava"]]
position = Vector2( 8, 8 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.462745, 0.313726, 0, 1 )
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
z_index = 3
polygon = PoolVector2Array( -8, 0, 0, -4, 8, 0, 0, 4 )

[connection signal="input_event" from="." to="." method="_on_SelectableTile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_SelectableTile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SelectableTile_mouse_exited"]
